Add build-dependencies for Sleuthkit support

--- a/debian/control
+++ b/debian/control
@@ -13,6 +13,7 @@ Build-Depends: debhelper (>= 9),
   systemtap-sdt-dev,
   libcap-dev, libacl1-dev, libyajl-dev,
   libsystemd-dev | libsystemd-journal-dev,
+  sleuthkit, libtsk-dev,
   automake, autoconf, libtool,
   gperf, libxml2-utils,
   qemu-system-arm [armel armhf arm64],
