Add sgabios dependency for x86 architectures

--- a/debian/control
+++ b/debian/control
@@ -21,7 +21,7 @@ Build-Depends: debhelper (>= 9),
   qemu-system-misc [s390x],
   qemu-system-ppc [powerpc ppc64 ppc64el],
   qemu-system-sparc [sparc],
-  qemu-system-x86 [i386 amd64],
+  qemu-system-x86 [i386 amd64], sgabios [i386 amd64],
   qemu-utils,
   genisoimage, pkg-config,
   erlang-dev,
@@ -164,7 +164,7 @@ Depends: ${shlibs:Depends}, ${misc:Depends},
   qemu-system-misc [s390x],
   qemu-system-ppc [powerpc ppc64 ppc64el],
   qemu-system-sparc [sparc],
-  qemu-system-x86 [i386 amd64],
+  qemu-system-x86 [i386 amd64], sgabios [i386 amd64],
   ${appliance:Depends},
 Recommends: libguestfs-hfsplus,
  libguestfs-reiserfs,
