Add db-util build dependency so applications on  rpm-based guests can be inspected

--- a/debian/control
+++ b/debian/control
@@ -37,6 +37,7 @@ Build-Depends: debhelper (>= 9),
   libfuse-dev, fuse,
   libglib2.0-dev, gjs, gobject-introspection, libgirepository1.0-dev, gtk-doc-tools,
   libgtk2.0-dev,
+  db-util,
   netpbm, icoutils,
   po4a,
   curl,
