Add mips64el architecture

--- a/debian/control
+++ b/debian/control
@@ -114,7 +114,7 @@ Vcs-Browser: http://anonscm.debian.org/?p=pkg-libvirt/libguestfs.git
 XS-Ruby-Versions: all
 
 Package: guestfsd
-Architecture: amd64 arm64 armel armhf i386 mipsel powerpc ppc64el s390x ppc64
+Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
 Depends: ${shlibs:Depends}, ${misc:Depends},
   bsdmainutils,
   diffutils,
@@ -143,7 +143,7 @@ Description: Daemon to access to guest virtual machine through virtio serial
 
 Package: libguestfs-dev
 Section: libdevel
-Architecture: amd64 arm64 armel armhf i386 mipsel powerpc ppc64el s390x ppc64
+Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
 Multi-Arch: same
 Depends: libguestfs0 (= ${binary:Version}), ${misc:Depends}
 Conflicts: libguestfs0 (<< 1:1.14.9-1~)
@@ -155,7 +155,7 @@ Description: guest disk image management system - development headers
 
 Package: libguestfs0
 Section: libs
-Architecture: amd64 arm64 armel armhf i386 mipsel powerpc ppc64el s390x ppc64
+Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends},
@@ -198,7 +198,7 @@ Description: guest disk image management system - shared library
 
 Package: libguestfs-gfs2
 Section: libs
-Architecture: amd64 arm64 armel armhf i386 mipsel powerpc ppc64el s390x ppc64
+Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: libguestfs0 (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends},
@@ -212,7 +212,7 @@ Description: guest disk image management system - GFS2 support
 
 Package: libguestfs-hfsplus
 Section: libs
-Architecture: amd64 arm64 armel armhf i386 mipsel powerpc ppc64el s390x ppc64
+Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: libguestfs0 (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends},
@@ -225,7 +225,7 @@ Description: guest disk image management system - HFS+ support
 
 Package: libguestfs-jfs
 Section: libs
-Architecture: amd64 arm64 armel armhf i386 mipsel powerpc ppc64el s390x ppc64
+Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: libguestfs0 (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends},
@@ -238,7 +238,7 @@ Description: guest disk image management system - JFS support
 
 Package: libguestfs-nilfs
 Section: libs
-Architecture: amd64 arm64 armel armhf i386 mipsel powerpc ppc64el s390x ppc64
+Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: libguestfs0 (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends},
@@ -251,7 +251,7 @@ Description: guest disk image management system - NILFS v2 support
 
 Package: libguestfs-reiserfs
 Section: libs
-Architecture: amd64 arm64 armel armhf i386 mipsel powerpc ppc64el s390x ppc64
+Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: libguestfs0 (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends},
@@ -264,7 +264,7 @@ Description: guest disk image management system - ReiserFS support
 
 Package: libguestfs-rescue
 Section: libs
-Architecture: amd64 arm64 armel armhf i386 mipsel powerpc ppc64el s390x ppc64
+Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: libguestfs0 (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends},
@@ -279,7 +279,7 @@ Description: guest disk image management system - virt-rescue enhancements
 
 Package: libguestfs-rsync
 Section: libs
-Architecture: amd64 arm64 armel armhf i386 mipsel powerpc ppc64el s390x ppc64
+Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: libguestfs0 (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends},
@@ -293,7 +293,7 @@ Description: guest disk image management system - rsync support
 
 Package: libguestfs-xfs
 Section: libs
-Architecture: amd64 arm64 armel armhf i386 mipsel powerpc ppc64el s390x ppc64
+Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: libguestfs0 (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends},
@@ -319,7 +319,7 @@ Description: guest disk image management system - ZFS support
 
 Package: libguestfs-tools
 Section: admin
-Architecture: amd64 arm64 armel armhf i386 mipsel powerpc ppc64el s390x ppc64
+Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
 Depends: libguestfs0 (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends},
  libsys-virt-perl, libguestfs-perl (= ${binary:Version}),
  libwin-hivex-perl,
@@ -343,7 +343,7 @@ Description: guest disk image management system - tools
 
 Package: libguestfs0-dbg
 Section: debug
-Architecture: amd64 arm64 armel armhf i386 mipsel powerpc ppc64el s390x ppc64
+Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
 Multi-Arch: same
 Depends: ${shlibs:Depends}, ${misc:Depends}, libguestfs0 (= ${binary:Version})
 Description: guest disk image management system - debug symbols
@@ -354,7 +354,7 @@ Description: guest disk image management system - debug symbols
 
 Package: python-guestfs
 Section: python
-Architecture: amd64 arm64 armel armhf i386 mipsel powerpc ppc64el s390x ppc64
+Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
 Depends: ${shlibs:Depends}, ${misc:Depends}, ${python:Depends}, libguestfs0 (= ${binary:Version})
 Provides: python-libguestfs
 Conflicts: python-libguestfs, libguestfs-dev (<< 1:1.14.9-1~)
@@ -366,7 +366,7 @@ Description: guest disk image management system - Python bindings
  
 Package: python3-guestfs
 Section: python
-Architecture: amd64 arm64 armel armhf i386 mipsel powerpc ppc64el s390x ppc64
+Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
 Depends: ${shlibs:Depends}, ${misc:Depends}, ${python3:Depends}
 Breaks: python-guestfs (<< 1:1.22.2-1~)
 Description: guest disk image management system - Python 3 bindings
@@ -377,7 +377,7 @@ Description: guest disk image management system - Python 3 bindings
 
 Package: libguestfs-perl
 Section: perl
-Architecture: amd64 arm64 armel armhf i386 mipsel powerpc ppc64el s390x ppc64
+Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
 Depends: ${shlibs:Depends}, ${misc:Depends}, libguestfs0 (= ${binary:Version}),
  ${perl:Depends},
  libxml-xpath-perl,
@@ -391,7 +391,7 @@ Description: guest disk image management system - Perl bindings
  
 Package: libguestfs-ocaml
 Section: ocaml
-Architecture: amd64 arm64 armel armhf i386 mipsel powerpc ppc64el s390x ppc64
+Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
 Depends: ${shlibs:Depends}, ${misc:Depends}, libguestfs0 (= ${binary:Version}),
  ${ocaml:Depends}
 Provides: ${ocaml:Provides}
@@ -403,7 +403,7 @@ Description: guest disk image management system - OCaml bindings
  
 Package: libguestfs-ocaml-dev
 Section: ocaml
-Architecture: amd64 arm64 armel armhf i386 mipsel powerpc ppc64el s390x ppc64
+Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
 Depends: ${shlibs:Depends}, ${misc:Depends},
  libguestfs0 (= ${binary:Version}),
  libguestfs-dev (= ${binary:Version}), 
@@ -419,7 +419,7 @@ Description: guest disk image management system - OCaml development files
 
 Package: erlang-guestfs
 Section: interpreters
-Architecture: amd64 arm64 armel armhf i386 mipsel powerpc ppc64el s390x ppc64
+Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
 Depends: ${erlang-base:Depends}, ${erlang-abi:Depends}, ${shlibs:Depends}, ${misc:Depends}
 Conflicts: libguestfs-dev (<< 1:1.14.9-1~)
 Description: guest disk image management system - Erlang bindings
@@ -430,7 +430,7 @@ Description: guest disk image management system - Erlang bindings
 
 Package: libguestfs-java
 Section: java
-Architecture: amd64 arm64 armel armhf i386 mipsel powerpc ppc64el s390x ppc64
+Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Conflicts: libguestfs-dev (<< 1:1.15.15-1~)
 Description: guest disk image management system - Java bindings
@@ -442,7 +442,7 @@ Description: guest disk image management system - Java bindings
 Package: ruby-guestfs
 Section: ruby
 XB-Ruby-Versions: ${ruby:Versions}
-Architecture: amd64 arm64 armel armhf i386 mipsel powerpc ppc64el s390x ppc64
+Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
 Depends: ${shlibs:Depends}, ${misc:Depends}, ruby | ruby-interpreter
 Conflicts: libguestfs-dev (<< 1:1.15.15-1~)
 Description: guest disk image management system - Ruby bindings
@@ -453,7 +453,7 @@ Description: guest disk image management system - Ruby bindings
 
 Package: libguestfs-gobject-1.0-0
 Section: libs
-Architecture: amd64 arm64 armel armhf i386 mipsel powerpc ppc64el s390x ppc64
+Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: libguestfs0 (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
@@ -466,7 +466,7 @@ Description: guest disk image management system - GObject bindings
 
 Package: libguestfs-gobject-dev
 Section: libdevel
-Architecture: amd64 arm64 armel armhf i386 mipsel powerpc ppc64el s390x ppc64
+Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
 Multi-Arch: same
 Depends: libguestfs-gobject-1.0-0 (= ${binary:Version}), ${misc:Depends}
 Conflicts: libguestfs0 (<< 1:1.14.9-1~)
@@ -479,7 +479,7 @@ Description: guest disk image management system - GObject development headers
 
 Package: gir1.2-guestfs-1.0
 Section: introspection
-Architecture: amd64 arm64 armel armhf i386 mipsel powerpc ppc64el s390x ppc64
+Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
 Depends: libguestfs-gobject-1.0-0 (= ${binary:Version}), ${gir:Depends}, ${misc:Depends}
 Conflicts: libguestfs0 (<< 1:1.14.9-1~)
 Description: guest disk image management system - GObject introspection files
@@ -489,7 +489,7 @@ Description: guest disk image management system - GObject introspection files
  This package contains the GObject introspection data.
 
 Package: lua-guestfs
-Architecture: amd64 arm64 armel armhf i386 mipsel powerpc ppc64el s390x ppc64
+Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends}
@@ -513,7 +513,7 @@ Description: guest disk image management system - Golang bindings
 
 Package: php-guestfs
 Section: php
-Architecture: amd64 arm64 armel armhf i386 mipsel powerpc ppc64el s390x ppc64
+Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
 Depends: ${shlibs:Depends}, ${php:Depends}, ${misc:Depends},
 Description: guest disk image management system - PHP bindings
  The libguestfs library allows accessing and modifying guest disk
