Add some dependencies to libguestfs0 (Closes: #849597)

--- a/debian/control
+++ b/debian/control
@@ -80,6 +80,7 @@ Build-Depends: debhelper (>= 9),
   isc-dhcp-client,
   jfsutils,
   kmod | module-init-tools,
+  ldmtool,
   less,
 # libc-bin,
   lsof,
@@ -166,6 +167,10 @@ Depends: ${shlibs:Depends}, ${misc:Depends},
   qemu-system-ppc [powerpc ppc64 ppc64el],
   qemu-system-sparc [sparc],
   qemu-system-x86 [i386 amd64], sgabios [i386 amd64],
+  db-util,
+  icoutils,
+  netpbm,
+  osinfo-db,
   ${appliance:Depends},
 Recommends: libguestfs-hfsplus,
  libguestfs-reiserfs,
