--- a/debian/control
+++ b/debian/control
@@ -116,7 +116,7 @@ Vcs-Browser: http://anonscm.debian.org/?p=pkg-libvirt/libguestfs.git
 XS-Ruby-Versions: all
 
 Package: guestfsd
-Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
+Architecture: linux-any
 Depends: ${shlibs:Depends}, ${misc:Depends},
   bsdmainutils,
   diffutils,
@@ -145,7 +145,7 @@ Description: Daemon to access to guest virtual machine through virtio serial
 
 Package: libguestfs-dev
 Section: libdevel
-Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
+Architecture: linux-any
 Multi-Arch: same
 Depends: libguestfs0 (= ${binary:Version}), ${misc:Depends}
 Conflicts: libguestfs0 (<< 1:1.14.9-1~)
@@ -157,7 +157,7 @@ Description: guest disk image management system - development headers
 
 Package: libguestfs0
 Section: libs
-Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
+Architecture: linux-any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends},
@@ -204,7 +204,7 @@ Description: guest disk image management system - shared library
 
 Package: libguestfs-gfs2
 Section: libs
-Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
+Architecture: linux-any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: libguestfs0 (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends},
@@ -218,7 +218,7 @@ Description: guest disk image management system - GFS2 support
 
 Package: libguestfs-hfsplus
 Section: libs
-Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
+Architecture: linux-any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: libguestfs0 (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends},
@@ -231,7 +231,7 @@ Description: guest disk image management system - HFS+ support
 
 Package: libguestfs-jfs
 Section: libs
-Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
+Architecture: linux-any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: libguestfs0 (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends},
@@ -244,7 +244,7 @@ Description: guest disk image management system - JFS support
 
 Package: libguestfs-nilfs
 Section: libs
-Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
+Architecture: linux-any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: libguestfs0 (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends},
@@ -257,7 +257,7 @@ Description: guest disk image management system - NILFS v2 support
 
 Package: libguestfs-reiserfs
 Section: libs
-Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
+Architecture: linux-any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: libguestfs0 (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends},
@@ -270,7 +270,7 @@ Description: guest disk image management system - ReiserFS support
 
 Package: libguestfs-rescue
 Section: libs
-Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
+Architecture: linux-any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: libguestfs0 (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends},
@@ -285,7 +285,7 @@ Description: guest disk image management system - virt-rescue enhancements
 
 Package: libguestfs-rsync
 Section: libs
-Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
+Architecture: linux-any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: libguestfs0 (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends},
@@ -299,7 +299,7 @@ Description: guest disk image management system - rsync support
 
 Package: libguestfs-xfs
 Section: libs
-Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
+Architecture: linux-any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: libguestfs0 (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends},
@@ -325,7 +325,7 @@ Description: guest disk image management system - ZFS support
 
 Package: libguestfs-tools
 Section: admin
-Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
+Architecture: linux-any
 Depends: libguestfs0 (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends},
  libsys-virt-perl, libguestfs-perl (= ${binary:Version}),
  libwin-hivex-perl,
@@ -349,7 +349,7 @@ Description: guest disk image management system - tools
 
 Package: libguestfs0-dbg
 Section: debug
-Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
+Architecture: linux-any
 Multi-Arch: same
 Depends: ${shlibs:Depends}, ${misc:Depends}, libguestfs0 (= ${binary:Version})
 Description: guest disk image management system - debug symbols
@@ -360,7 +360,7 @@ Description: guest disk image management system - debug symbols
 
 Package: python-guestfs
 Section: python
-Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
+Architecture: linux-any
 Depends: ${shlibs:Depends}, ${misc:Depends}, ${python:Depends}, libguestfs0 (= ${binary:Version})
 Provides: python-libguestfs
 Conflicts: python-libguestfs, libguestfs-dev (<< 1:1.14.9-1~)
@@ -372,7 +372,7 @@ Description: guest disk image management system - Python bindings
  
 Package: python3-guestfs
 Section: python
-Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
+Architecture: linux-any
 Depends: ${shlibs:Depends}, ${misc:Depends}, ${python3:Depends}
 Breaks: python-guestfs (<< 1:1.22.2-1~)
 Description: guest disk image management system - Python 3 bindings
@@ -383,7 +383,7 @@ Description: guest disk image management system - Python 3 bindings
 
 Package: libguestfs-perl
 Section: perl
-Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
+Architecture: linux-any
 Depends: ${shlibs:Depends}, ${misc:Depends}, libguestfs0 (= ${binary:Version}),
  ${perl:Depends},
  libxml-xpath-perl,
@@ -397,7 +397,7 @@ Description: guest disk image management system - Perl bindings
  
 Package: libguestfs-ocaml
 Section: ocaml
-Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
+Architecture: linux-any
 Depends: ${shlibs:Depends}, ${misc:Depends}, libguestfs0 (= ${binary:Version}),
  ${ocaml:Depends}
 Provides: ${ocaml:Provides}
@@ -409,7 +409,7 @@ Description: guest disk image management system - OCaml bindings
  
 Package: libguestfs-ocaml-dev
 Section: ocaml
-Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
+Architecture: linux-any
 Depends: ${shlibs:Depends}, ${misc:Depends},
  libguestfs0 (= ${binary:Version}),
  libguestfs-dev (= ${binary:Version}), 
@@ -425,7 +425,7 @@ Description: guest disk image management system - OCaml development files
 
 Package: erlang-guestfs
 Section: interpreters
-Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
+Architecture: linux-any
 Depends: ${erlang-base:Depends}, ${erlang-abi:Depends}, ${shlibs:Depends}, ${misc:Depends}
 Conflicts: libguestfs-dev (<< 1:1.14.9-1~)
 Description: guest disk image management system - Erlang bindings
@@ -436,7 +436,7 @@ Description: guest disk image management system - Erlang bindings
 
 Package: libguestfs-java
 Section: java
-Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
+Architecture: linux-any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Conflicts: libguestfs-dev (<< 1:1.15.15-1~)
 Description: guest disk image management system - Java bindings
@@ -448,7 +448,7 @@ Description: guest disk image management system - Java bindings
 Package: ruby-guestfs
 Section: ruby
 XB-Ruby-Versions: ${ruby:Versions}
-Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
+Architecture: linux-any
 Depends: ${shlibs:Depends}, ${misc:Depends}, ruby | ruby-interpreter
 Conflicts: libguestfs-dev (<< 1:1.15.15-1~)
 Description: guest disk image management system - Ruby bindings
@@ -459,7 +459,7 @@ Description: guest disk image management system - Ruby bindings
 
 Package: libguestfs-gobject-1.0-0
 Section: libs
-Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
+Architecture: linux-any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: libguestfs0 (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
@@ -472,7 +472,7 @@ Description: guest disk image management system - GObject bindings
 
 Package: libguestfs-gobject-dev
 Section: libdevel
-Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
+Architecture: linux-any
 Multi-Arch: same
 Depends: libguestfs-gobject-1.0-0 (= ${binary:Version}), ${misc:Depends}
 Conflicts: libguestfs0 (<< 1:1.14.9-1~)
@@ -485,7 +485,7 @@ Description: guest disk image management system - GObject development headers
 
 Package: gir1.2-guestfs-1.0
 Section: introspection
-Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
+Architecture: linux-any
 Depends: libguestfs-gobject-1.0-0 (= ${binary:Version}), ${gir:Depends}, ${misc:Depends}
 Conflicts: libguestfs0 (<< 1:1.14.9-1~)
 Description: guest disk image management system - GObject introspection files
@@ -495,7 +495,7 @@ Description: guest disk image management system - GObject introspection files
  This package contains the GObject introspection data.
 
 Package: lua-guestfs
-Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
+Architecture: linux-any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends}
@@ -519,7 +519,7 @@ Description: guest disk image management system - Golang bindings
 
 Package: php-guestfs
 Section: php
-Architecture: amd64 arm64 armel armhf i386 mipsel mips64el powerpc ppc64el s390x ppc64
+Architecture: linux-any
 Depends: ${shlibs:Depends}, ${php:Depends}, ${misc:Depends},
 Description: guest disk image management system - PHP bindings
  The libguestfs library allows accessing and modifying guest disk
