--- a/debian/control
+++ b/debian/control
@@ -55,7 +55,7 @@ Build-Depends: debhelper (>= 9),
   linux-image-powerpc64le [ppc64el],
   linux-image-sparc64 [sparc],
   linux-image-amd64 [amd64],
-  linux-image-586 [i386] | linux-image-486 [i386] | linux-image-686-pae [i386],
+  linux-image-686-pae [i386] | linux-image-586 [i386] | linux-image-486 [i386],
   acl,
   attr,
   binutils,
