Adjust dependencies because *fdisk will be split out of util-linux into its own package (Closes: #872101)

--- a/debian/control
+++ b/debian/control
@@ -15,6 +15,7 @@ Build-Depends: debhelper (>= 9),
   libsystemd-dev | libsystemd-journal-dev,
   sleuthkit, libtsk-dev,
   automake, autoconf, libtool,
+  fdisk | util-linux (<< 2.29.2-3~),
   gperf, libxml2-utils,
   qemu-system-arm [armel armhf arm64],
   qemu-system-mips [mips mipsel mips64 mips64el],
