--- a/debian/control
+++ b/debian/control
@@ -111,8 +111,8 @@ Build-Depends: debhelper (>= 10),
   zfs-fuse [i386 amd64 armel powerpc sparc],
 Homepage: http://libguestfs.org
 Standards-Version: 4.0.0
-Vcs-Git: git://anonscm.debian.org/pkg-libvirt/libguestfs.git
-Vcs-Browser: http://anonscm.debian.org/?p=pkg-libvirt/libguestfs.git
+Vcs-Git: https://anonscm.debian.org/git/pkg-libvirt/libguestfs.git
+Vcs-Browser: https://anonscm.debian.org/cgit/pkg-libvirt/libguestfs.git
 XS-Ruby-Versions: all
 
 Package: guestfsd
