--- a/debian/rules
+++ b/debian/rules
@@ -162,4 +162,4 @@ override_dh_makeshlibs:
 	dh $@ \
 	   --parallel \
 	   --without=python-support \
-	   --with=autoreconf,ocaml,python2,python3,bash-completion,ruby,gir,lua,php
+	   --with=ocaml,python2,python3,bash-completion,ruby,gir,lua,php
