--- a/debian/control
+++ b/debian/control
@@ -19,8 +19,8 @@ Build-Depends: debhelper (>= 10),
   qemu-system-arm [armel armhf arm64],
   qemu-system-mips [mips mipsel mips64 mips64el],
   qemu-system-misc [s390x],
-  qemu-system-ppc [powerpc ppc64 ppc64el],
-  qemu-system-sparc [sparc],
+  qemu-system-ppc [powerpc powerpcspe ppc64 ppc64el],
+  qemu-system-sparc [sparc sparc64],
   qemu-system-x86 [i386 amd64], sgabios [i386 amd64],
   qemu-utils,
   genisoimage, pkg-config,
