--- a/debian/control
+++ b/debian/control
@@ -65,6 +65,7 @@ Build-Depends: debhelper (>= 10),
   cpio,
   cryptsetup, busybox,
   dosfstools,
+  exfat-utils,
   extlinux [i386 amd64],
   file,
   gawk,
@@ -101,6 +102,7 @@ Build-Depends: debhelper (>= 10),
   rsync,
   scrub,
   strace,
+  squashfs-tools,
   syslinux [i386 amd64],
   udev,
 # ufsutils,
