--- a/debian/control
+++ b/debian/control
@@ -36,7 +36,7 @@ Build-Depends: debhelper (>= 10),
   libstring-shellquote-perl,
   libsys-virt-perl, libwin-hivex-perl,
   libfuse-dev, fuse,
-  libglib2.0-dev, gjs, gobject-introspection, libgirepository1.0-dev, gtk-doc-tools,
+  libglib2.0-dev, gjs, gobject-introspection, libgirepository1.0-dev,
   libgtk2.0-dev,
   db-util,
   netpbm, icoutils,
