Change Build-Depends: btrfs-tools to btrfs-progs (Closes: #878916)

--- a/debian/control
+++ b/debian/control
@@ -60,7 +60,7 @@ Build-Depends: debhelper (>= 10),
   attr,
   binutils,
   bsdmainutils,
-  btrfs-tools,
+  btrfs-progs,
   bzip2,
   cpio,
   cryptsetup, busybox,
