--- a/debian/control
+++ b/debian/control
@@ -114,8 +114,8 @@ Build-Depends: debhelper (>= 10),
   zfs-fuse [i386 amd64 armel armhf powerpc ppc64el sparc],
 Homepage: http://libguestfs.org
 Standards-Version: 4.1.3
-Vcs-Git: https://anonscm.debian.org/git/pkg-libvirt/libguestfs.git
-Vcs-Browser: https://anonscm.debian.org/cgit/pkg-libvirt/libguestfs.git
+Vcs-Git: https://salsa.debian.org/libvirt-team/libguestfs.git
+Vcs-Browser: https://salsa.debian.org/libvirt-team/libguestfs
 XS-Ruby-Versions: all
 
 Package: guestfsd
