Add build dependencies: yara, hivex-ocaml

--- a/debian/control
+++ b/debian/control
@@ -6,13 +6,14 @@ Uploaders: Richard Jones <rjones@redhat.com>, Guido Günther <agx@sigxcpu.org>, 
 Build-Depends: debhelper (>= 10),
   po-debconf, bash-completion,
   supermin (>= 5),
-  libreadline-dev, libaugeas-dev (>= 1.0.0), libselinux1-dev, libhivex-dev, libvirt-dev,
+  libreadline-dev, libaugeas-dev (>= 1.0.0), libselinux1-dev, libhivex-ocaml-dev, libvirt-dev (>= 1.2.20),
   liblzma-dev, libmagic-dev, libncurses5-dev, libncursesw5-dev, libpcre3-dev, libxml2-dev,
   libconfig-dev, libc-dev-bin,
   systemtap-sdt-dev,
   libcap-dev, libacl1-dev, libyajl-dev,
   libsystemd-dev | libsystemd-journal-dev,
   sleuthkit, libtsk-dev,
+  libyara-dev,
   automake, autoconf, libtool,
   fdisk | util-linux (<< 2.29.2-3~),
   gperf, libxml2-utils,
