Remove kernel package build dependency all architectures other than i386, amd64 (Closes: #894742)

--- a/debian/control
+++ b/debian/control
@@ -46,15 +46,7 @@ Build-Depends: debhelper (>= 10),
   flex, bison,
   golang-go [i386 amd64 armel armhf arm64 mips mipsel mips64el ppc64el],
   dh-php, php-all-dev | php5-dev,
-# for appliance
-  linux-image-marvell [armel] | linux-image-versatile [armel],
-  linux-image-armmp [armhf],
-  linux-image-arm64 [arm64],
-  linux-image-4kc-malta [mips mipsel] | linux-image-5kc-malta [mips mipsel mips64 mips64el],
-  linux-image-s390x [s390x],
-  linux-image-powerpc64 [powerpc ppc64],
-  linux-image-powerpc64le [ppc64el],
-  linux-image-sparc64 [sparc],
+# for testing (make quickcheck)
   linux-image-amd64 [amd64],
   linux-image-686-pae [i386] | linux-image-586 [i386] | linux-image-486 [i386],
   acl,
