Add build dependencies: ounit, ocaml-libvirt

--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,8 @@ Build-Depends: debhelper (>= 10),
   po-debconf, bash-completion,
   supermin (>= 5),
   libreadline-dev, libaugeas-dev (>= 1.0.0), libselinux1-dev, libhivex-ocaml-dev, libvirt-dev (>= 1.2.20),
+  libvirt-ocaml-dev,
+  libounit-ocaml-dev,
   liblzma-dev, libmagic-dev, libncurses5-dev, libncursesw5-dev, libpcre3-dev, libxml2-dev,
   libconfig-dev, libc-dev-bin,
   systemtap-sdt-dev,
