--- a/debian/control
+++ b/debian/control
@@ -39,7 +39,7 @@ Build-Depends: debhelper (>= 10),
   libstring-shellquote-perl,
   libsys-virt-perl, libwin-hivex-perl,
   libfuse-dev, fuse,
-  libglib2.0-dev, gjs, gobject-introspection, libgirepository1.0-dev,
+  libglib2.0-dev, gjs [!s390x] <!nocheck>, gobject-introspection, libgirepository1.0-dev,
   libgtk2.0-dev,
   db-util,
   netpbm, icoutils,
