--- a/debian/control
+++ b/debian/control
@@ -58,7 +58,7 @@ Build-Depends: debhelper (>= 12),
   btrfs-progs,
   bzip2,
   cpio,
-  cryptsetup, busybox,
+  cryptsetup-bin, busybox,
   dosfstools,
   exfat-utils,
   extlinux [i386 amd64],
